--- a/Week1.html
+++ b/Week1.html
@@ -24,7 +24,8 @@
             <div class="two-columns">
                 <div class="column">
                     <p>
-                        3 schermen voor de trein ontwerpen: 1 overzichtsscherm, 1 perronscherm, 1 wagonscherm en eventueel 1 scherm voor op de gsm met extra info als je de QR code scant. Het moet gebruiksvriendelijk, toegankelijk en duidelijk zijn voor alle reizigers ( bv.mensen met een visuele beperking, mensen die de taal niet spreken, mensen die haast hebben), verschillende talen indien nodig.
+                        3 schermen voor de trein ontwerpen: <br> 
+                        1 overzichtsscherm, 1 perronscherm, 1 wagonscherm en eventueel 1 scherm voor op de gsm met extra info als je de QR code scant. Het moet gebruiksvriendelijk, toegankelijk en duidelijk zijn voor alle reizigers ( bv.mensen met een visuele beperking, mensen die de taal niet spreken, mensen die haast hebben), verschillende talen indien nodig.
                     </p>
                 </div>
                 <div class="column">
